# PR25Laaw05_SUPERPIXEL

./: .gitignore  CMakeLists.txt  README.md  model.ipynb  visualization.py
kernels/: kernels.cl  vector_sum.cl
model/: model.ipynb
src/: main.cpp  main_old.cpp
